헤더작업중

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 	
 	<header id="header">
 		<div class="inner">
-			<h1><a href="index.html">DCODELAB</a></h1>
+			<h1><a href="index.html">DORAN</a></h1>
 
 			<nav class="menuWeb">
 				<ul id="gnb">
+					<li><a href="index.html">BRAND</a></li>
 					<li><a href="department.html">DEPARTMENT</a></li>
 					<li><a href="youtube.html">YOUTUBE</a></li>
 					<li><a href="community.html">COMMUNITY</a></li>
@@ -58,9 +59,7 @@
 
 	
 	<figure id="visual">
-		
-		<img src="img/m2.jpg" alt="main1">
-		
+			
 		<div class="inner">
 			<article class="txt">
 				<h1>Insane Makeup</h1>
