--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 			<nav class="menuWeb">
 				<ul id="gnb">
-					<li><a href="index.html">BRAND</a></li>
+					<li><a href="index.html">BRAND  <i class="fas fa-chevron-down"></i></a></li>
 					<li><a href="department.html">DEPARTMENT</a></li>
 					<li><a href="youtube.html">YOUTUBE</a></li>
 					<li><a href="community.html">COMMUNITY</a></li>
@@ -28,11 +28,10 @@
 				</ul>
 
 				<ul class="util">
-					<li><a href="#">Contact</a></li>
-					<li><a href="#">Login</a></li>
-					<li><a href="#">Help</a></li>
-					<li><a href="join.html">Join</a></li>
-					<li><a href="#">Sitemap</a></li>
+					<li><a href="join.html"><i class="fas fa-user"></i></a></li>
+					<li><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
+					<li><a href="#"><i class="fas fa-search"></i></a></li>
+					<li><a href="#">KOR <i class="fas fa-chevron-down"></i></a></li>
 				</ul>
 
 			</nav>
