푸터작업중

--- a/index.html
+++ b/index.html
@@ -270,24 +270,19 @@
 					<a href="#">사업자 정보 확인</a>
 					<a href="#"><img src="img/spc_slou_pc.png"> 에스크로 가입사실 확인</a>
 				</article>
-
-				<div class="list">
-					<div class="company">
-
-					</div>
-					<div class="sns">
-						
-					</div>
-				</div>
+			</div>
+		</div>
+		<div class="list">
+			<div class="company">
 
 			</div>
-
-
-			<!-- <address>
-				Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat, hic? <br>
-				TEL:032-700-1234
-			</address> -->
-
+			<div class="sns">
+				<a href="#"><i class="fab fa-instagram"></i></a>
+				<a href="#"><i class="fab fa-facebook-f"></i></a>
+				<a href="#"><i class="fab fa-twitter"></i></a>
+				<a href="#"><i class="fab fa-youtube"></i></a>
+				
+			</div>
 		</div>
 	</footer>
 
