푸터 수정중

--- a/index.html
+++ b/index.html
@@ -273,15 +273,22 @@
 			</div>
 		</div>
 		<div class="list">
-			<div class="company">
+			<div class="wrap">
+				<div class="company">
+					<a href="#"><img src="img/fursys.png"></a>
+					<a href="#"><img src="img/iloom.png"></a>
+					<a href="#"><img src="img/sidiz.png"></a>
+					<a href="#"><img src="img/desker.png"></a>
+					<a href="#"><img src="img/slou.png"></a>
+					<a href="#"><img src="img/alloso.png"></a>
 
-			</div>
-			<div class="sns">
-				<a href="#"><i class="fab fa-instagram"></i></a>
-				<a href="#"><i class="fab fa-facebook-f"></i></a>
-				<a href="#"><i class="fab fa-twitter"></i></a>
-				<a href="#"><i class="fab fa-youtube"></i></a>
-				
+				</div>
+				<div class="sns">
+					<a href="#"><i class="fab fa-instagram"></i></a>
+					<a href="#"><i class="fab fa-facebook-f"></i></a>
+					<a href="#"><i class="fab fa-twitter"></i></a>
+					<a href="#"><i class="fab fa-youtube"></i></a>
+				</div>
 			</div>
 		</div>
 	</footer>
