--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>기업형포트폴리오_도다정</title>
 	<script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="css/style.css">
-	<script defer src="custom.js"></script>
+	<script defer src="js/custom.js"></script>
 </head>
 
 <body>
@@ -58,24 +58,47 @@
 
 
 	<figure id="visual">
+		<article id="slider">
+			<ul class="list">
+				<li data-index="1">
+					<div class="txt">
+						<h1>Insane Makeup</h1>
+						<p>Although I tend to favor a natural look,<br> I also like to have fun with make up.</p>
+					</div>
+				</li>
+				<li data-index="2">
+					<div class="txt">
+						<h1>Insane Makeup</h1>
+						<p>Although I tend to favor a natural look,<br> I also like to have fun with make up.</p>
+					</div>
+				</li>
+				<li data-index="3">
+					<div class="txt">
+						<h1>Insane Makeup</h1>
+						<p>Although I tend to favor a natural look,<br> I also like to have fun with make up.</p>
+					</div>
+				</li>
+				<li data-index="4">
+					<div class="txt">
+						<h1>Insane Makeup</h1>
+						<p>Although I tend to favor a natural look,<br> I also like to have fun with make up.</p>
+					</div>
+				</li>
+			</ul>
+		</article>
+
+		<div class="btns">
+			<a href="#" class="prev"><i class="fas fa-chevron-right"></i></a>
+			<a href="#" class="prev"><i class="fas fa-chevron-left"></i></a>
+		</div>
 
 		<div class="inner">
-			<article class="txt">
-				<h1>Insane Makeup</h1>
-				<p>Although I tend to favor a natural look, I also like to have fun with make up.</p>
-
-				<a href="#"><i class="fas fa-chevron-left"></i></a>
-
-
-				<a href="#"><i class="fas fa-chevron-right"></i></a>
-
-
-			</article>
 			<ul class="sns">
-				<li><a href="#">Follow Us</a></li>
-				<li><a href="#">Facebook</a></li>
-				<li><a href="#">Instagram</a></li>
-				<li><a href="#">Twitter </a></li>
+				<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+				<li><a href="#"><i class="fab fa-instagram"></i></a></li>
+				<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+				<li><a href="#"><i class="fab fa-google"></i></a></li>
+
 			</ul>
 		</div>
 	</figure>
