갤러리 작업중

--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>community</title>
     <script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/jquery.easing.1.3.js"></script>
+    <script defer src="js/myflickr.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -59,7 +62,9 @@
             <h1>Sub Title<span>서브페이지제목</span> </h1>
             <!-- 서브페이지 컨텐츠 들어가는 부분 -->
 
+            <div id="gallery">
 
+            </div>
 
         </div>
 
