--- a/gallery.html
+++ b/gallery.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>community</title>
+    <title>gallery</title>
     <script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
     <script defer src="js/myflickr.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -59,7 +58,7 @@
     <section class="content gallery">
         <div class="sub_visual"></div>
         <div class="inner">
-            <h1>Sub Title<span>서브페이지제목</span> </h1>
+            <!-- <h1>Gallery<span>Title</span> </h1> -->
             <!-- 서브페이지 컨텐츠 들어가는 부분 -->
 
             <div id="gallery">
