--- a/youtube.html
+++ b/youtube.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>community</title>
+    <title>youtube</title>
     <script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
+	<script defer src="js/youtube.js"></script>
 </head>
 <body>
     <header id="header_sub">
@@ -53,8 +55,19 @@
 	</header>
 
 
+    <section class="content youtube">
+        <div class="sub_visual"></div>
+        <div class="inner">
+            <!-- <h1>Youtube<span>Title</span> </h1> -->
+            <!-- 서브페이지 컨텐츠 들어가는 부분 -->
 
-    <!-- 콘텐츠 들어갈 부분 -->
+            <div id="vidGallery"></div>
+
+        </div>
+
+
+    </section>
+
 
 
 
