--- a/location.html
+++ b/location.html
@@ -60,6 +60,7 @@
 	<section class="content location">
         <div class="sub_visual"></div>
         <div class="inner">
+			<h1>Location</h1>
 
             <div id="map"></div>
 
