팝업박스 작업

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>기업형포트폴리오_도다정</title>
-	<script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="css/style.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
 	<script defer src="js/custom.js"></script>
+	<script defer src="js/popup.js"></script>
 </head>
 
 <body>
@@ -102,6 +104,22 @@
 			</ul>
 		</div>
 	</figure>
+
+	<aside id="popup">
+		<div class="pop_inner">
+			<h1>DODAL</h1>
+			<div class="pop_content">
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dignissimos corporis, placeat doloribus
+				consequatur fugiat?
+			</div>
+			<div class="wrap">
+				<input type="checkbox" name="ck" id="ck">
+				<label for="ck">오늘 하루 그만보기</label>
+			</div>
+
+			<a href="#" class="close">CLOSE</a>
+		</div>
+	</aside>
 
 	<section id="news">
 		<div class="inner">
