메인페이지 수정작업중

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			<a href="#" class="prev"><i class="fas fa-chevron-left"></i></a>
 		</div>
 
-		<div class="inner">
+		<div class="btns_inner">
 			<ul class="sns">
 				<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
 				<li><a href="#"><i class="fab fa-instagram"></i></a></li>
@@ -125,7 +125,7 @@
 		<div class="inner">
 			<h1>RECENT NEWS</h1>
 			<div class="wrap">
-				<article>
+				<!-- <article>
 					<div class="pic">
 						<img src="img/n1.jpg" alt="뉴스1 이미지">
 					</div>
@@ -133,7 +133,7 @@
 						<a href="#">Lorem, ipsum.</a>
 					</h2>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-				</article>
+				</article> -->
 				<article>
 					<div class="pic">
 						<img src="img/n3.jpg" alt="뉴스2 이미지">
@@ -207,6 +207,7 @@
 					<img src="img/br4.jpg" alt="브랜드2">
 					<div class="txt">
 
+						
 						<h2>BRAND IDENTITY</h2>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis eius repellendus nemo
 							atque
@@ -221,9 +222,17 @@
 
 	<section id="banner">
 		<div class="inner">
-			<h1>Lorem ipsum dolor sit amet consectetur.</h1>
+			<h1>DODAL</h1>
+			<h2>Smart Search</h2>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita inventore quisquam nisi est dolor
 				incidunt minima cum enim ipsum magni?</p>
+
+				<div class="box">
+					<a href="#">lorem <i class="fas fa-sort-down"></i></a>
+					<a href="#">lorem <i class="fas fa-sort-down"></i></a>
+					<a href="#">Search<i class="fas fa-search"></i></a>
+					
+				</div>
 		</div>
 	</section>
 
