지도 작업중

--- a/location.html
+++ b/location.html
@@ -61,7 +61,7 @@
         <div class="sub_visual"></div>
         <div class="inner">
 			<h1>Location</h1>
-			<h2>Dodal 오시는길 안내</h2>
+			<h2>DODAL로 오시는길을 안내해드립니다.</h2>
             <div id="map"></div>
 
 			<!-- <ul class="traffic">
