--- a/index.html
+++ b/index.html
@@ -89,20 +89,11 @@
 			</ul>
 		</article>
 
-		<div class="btns">
-			<a href="#" class="prev"><i class="fas fa-chevron-right"></i></a>
-			<a href="#" class="prev"><i class="fas fa-chevron-left"></i></a>
-		</div>
-
 		<div class="btns_inner">
-			<ul class="sns">
-				<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-				<li><a href="#"><i class="fab fa-instagram"></i></a></li>
-				<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-				<li><a href="#"><i class="fab fa-google"></i></a></li>
-
-			</ul>
+			<!-- <a href="#" class="prev"><i class="fas fa-chevron-left"></i></a> -->
+			<a href="#" class="next"><i class="fas fa-chevron-right"></i></a>
 		</div>
+
 	</figure>
 
 	<aside id="popup">
@@ -135,6 +126,7 @@
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
 				</article> -->
 				<article>
+					<div class="circle"></div>
 					<div class="pic">
 						<img src="img/n3.jpg" alt="뉴스2 이미지">
 					</div>
