조직도 리셋

--- a/department.html
+++ b/department.html
@@ -57,7 +57,7 @@
         <div class="inner">
             <h1>Corporate/Organization</h1>
             <!-- 서브페이지 컨텐츠가 들어가는 부분 -->
-
+<!-- 
 			<div class="division">
 				<ul class="div_tree">
 					<li>
@@ -121,7 +121,7 @@
 					</li>
 				</ul>
 
-			</div>
+			</div> -->
 
 
 
