--- a/department.html
+++ b/department.html
@@ -56,6 +56,7 @@
         <div class="sub_visual"></div>
         <div class="inner">
             <h1>Corporate/Organization</h1>
+			<p>다시 작업중</p>
             <!-- 서브페이지 컨텐츠가 들어가는 부분 -->
 <!-- 
 			<div class="division">
