--- a/index.html
+++ b/index.html
@@ -130,28 +130,28 @@
 					<div class="pic">
 						<img src="img/n3.jpg" alt="뉴스2 이미지">
 					</div>
-					<h2>
+					<!-- <h2>
 						<a href="#">Lorem, ipsum.</a>
 					</h2>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p> -->
 				</article>
 				<article>
 					<div class="pic">
 						<img src="img/n5.jpg" alt="뉴스3 이미지">
 					</div>
-					<h2>
+					<!-- <h2>
 						<a href="#">Lorem, ipsum.</a>
 					</h2>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p> -->
 				</article>
 				<article>
 					<div class="pic">
 						<img src="img/n4.jpg" alt="뉴스4 이미지">
 					</div>
-					<h2>
+					<!-- <h2>
 						<a href="#">Lorem, ipsum.</a>
 					</h2>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p> -->
 				</article>
 			</div>
 		</div>
