--- a/youtube.html
+++ b/youtube.html
@@ -58,7 +58,8 @@
     <section class="content youtube">
         <div class="sub_visual"></div>
         <div class="inner">
-            <!-- <h1>Youtube<span>Title</span> </h1> -->
+			<h1>Youtube</h1>
+           
             <!-- 서브페이지 컨텐츠 들어가는 부분 -->
 
             <div id="vidGallery"></div>
