--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/18f037b822.js" crossorigin="anonymous"></script>
 	<script defer src="js/custom.js"></script>
 	<script defer src="js/popup.js"></script>
 </head>
@@ -60,32 +61,16 @@
 
 
 	<figure id="visual">
+		<div class="txt">
+			<h1>Lorem</h1>
+			<p>Although I tend to favor a natural look,<br> I also like to have fun with make up.</p>
+		</div>
 		<article id="slider">
 			<ul class="list">
-				<li data-index="1">
-					<div class="txt">
-						<h1>Insane Makeup</h1>
-						<p>Although I tend to favor a natural look,<br> I also like to have fun with make up.</p>
-					</div>
-				</li>
-				<li data-index="2">
-					<div class="txt">
-						<h1>Insane Makeup</h1>
-						<p>Although I tend to favor a natural look,<br> I also like to have fun with make up.</p>
-					</div>
-				</li>
-				<li data-index="3">
-					<div class="txt">
-						<h1>Insane Makeup</h1>
-						<p>Although I tend to favor a natural look,<br> I also like to have fun with make up.</p>
-					</div>
-				</li>
-				<li data-index="4">
-					<div class="txt">
-						<h1>Insane Makeup</h1>
-						<p>Although I tend to favor a natural look,<br> I also like to have fun with make up.</p>
-					</div>
-				</li>
+				<li data-index="1"></li>
+				<li data-index="2"></li>
+				<li data-index="3"> </li>
+				<li data-index="4"></li>
 			</ul>
 		</article>
 
@@ -114,44 +99,61 @@
 
 	<section id="news">
 		<div class="inner">
-			<h1>RECENT NEWS</h1>
+			<h1>WHO WE ARE</h1>
+			<h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem, similique!</h2>
 			<div class="wrap">
-				<!-- <article>
-					<div class="pic">
-						<img src="img/n1.jpg" alt="뉴스1 이미지">
-					</div>
-					<h2>
-						<a href="#">Lorem, ipsum.</a>
-					</h2>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-				</article> -->
 				<article>
-					<div class="circle"></div>
-					<div class="pic">
-						<img src="img/n3.jpg" alt="뉴스2 이미지">
+					<div class="icon">
+						<i class="far fa-calendar-alt"></i>
 					</div>
-					<!-- <h2>
-						<a href="#">Lorem, ipsum.</a>
-					</h2>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p> -->
+					<div class="news_txt">
+						<h2>
+							<a href="#">Lorem</a>
+						</h2>
+						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores necessitatibus ex corporis
+							dolorum aperiam dolor numquam perspiciatis minus nesciunt officiis! Veritatis dignissimos
+							tempora ducimus assumenda earum impedit velit, mollitia amet!</p>
+					</div>
 				</article>
 				<article>
-					<div class="pic">
-						<img src="img/n5.jpg" alt="뉴스3 이미지">
+
+					<div class="icon">
+						<i class="far fa-user-circle"></i>
 					</div>
-					<!-- <h2>
-						<a href="#">Lorem, ipsum.</a>
-					</h2>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p> -->
+					<div class="news_txt">
+						<h2>
+							<a href="#">Lorem</a>
+						</h2>
+						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores necessitatibus ex corporis
+							dolorum aperiam dolor numquam perspiciatis minus nesciunt officiis! Veritatis dignissimos
+							tempora ducimus assumenda earum impedit velit, mollitia amet!</p>
+					</div>
 				</article>
 				<article>
-					<div class="pic">
-						<img src="img/n4.jpg" alt="뉴스4 이미지">
+					<div class="icon">
+						<i class="fas fa-laptop-house"></i>
 					</div>
-					<!-- <h2>
-						<a href="#">Lorem, ipsum.</a>
-					</h2>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p> -->
+					<div class="news_txt">
+						<h2>
+							<a href="#">Lorem</a>
+						</h2>
+						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores necessitatibus ex corporis
+							dolorum aperiam dolor numquam perspiciatis minus nesciunt officiis! Veritatis dignissimos
+							tempora ducimus assumenda earum impedit velit, mollitia amet!</p>
+					</div>
+				</article>
+				<article>
+					<div class="icon">
+						<i class="far fa-file-code"></i>
+					</div>
+					<div class="news_txt">
+						<h2>
+							<a href="#">Lorem</a>
+						</h2>
+						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores necessitatibus ex corporis
+							dolorum aperiam dolor numquam perspiciatis minus nesciunt officiis! Veritatis dignissimos
+							tempora ducimus assumenda earum impedit velit, mollitia amet!</p>
+					</div>
 				</article>
 			</div>
 		</div>
@@ -199,7 +201,7 @@
 					<img src="img/br4.jpg" alt="브랜드2">
 					<div class="txt">
 
-						
+
 						<h2>BRAND IDENTITY</h2>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis eius repellendus nemo
 							atque
@@ -219,12 +221,12 @@
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita inventore quisquam nisi est dolor
 				incidunt minima cum enim ipsum magni?</p>
 
-				<div class="box">
-					<a href="#">lorem <i class="fas fa-sort-down"></i></a>
-					<a href="#">lorem <i class="fas fa-sort-down"></i></a>
-					<a href="#">Search<i class="fas fa-search"></i></a>
-					
-				</div>
+			<div class="box">
+				<a href="#">lorem <i class="fas fa-sort-down"></i></a>
+				<a href="#">lorem <i class="fas fa-sort-down"></i></a>
+				<a href="#">Search<i class="fas fa-search"></i></a>
+
+			</div>
 		</div>
 	</section>
 
