메인페이지 작업중

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 		<div class="txt">
 			<h1>Lorem</h1>
 			<p>Although I tend to favor a natural look,<br> I also like to have fun with make up.</p>
+			<a href="#">Read more <img src="img/arrow1.png" alt="arrow"></a>
 		</div>
 		<article id="slider">
 			<ul class="list">
@@ -112,7 +113,8 @@
 						</h2>
 						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores necessitatibus ex corporis
 							dolorum aperiam dolor numquam perspiciatis minus nesciunt officiis! Veritatis dignissimos
-							tempora ducimus assumenda earum impedit velit, mollitia amet!</p>
+							tempora ducimus assumenda earum impedit velit, mollitia amet!
+						</p>
 					</div>
 				</article>
 				<article>
@@ -126,7 +128,8 @@
 						</h2>
 						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores necessitatibus ex corporis
 							dolorum aperiam dolor numquam perspiciatis minus nesciunt officiis! Veritatis dignissimos
-							tempora ducimus assumenda earum impedit velit, mollitia amet!</p>
+							tempora ducimus assumenda earum impedit velit, mollitia amet!
+						</p>
 					</div>
 				</article>
 				<article>
@@ -139,7 +142,8 @@
 						</h2>
 						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores necessitatibus ex corporis
 							dolorum aperiam dolor numquam perspiciatis minus nesciunt officiis! Veritatis dignissimos
-							tempora ducimus assumenda earum impedit velit, mollitia amet!</p>
+							tempora ducimus assumenda earum impedit velit, mollitia amet!
+						</p>
 					</div>
 				</article>
 				<article>
@@ -152,9 +156,124 @@
 						</h2>
 						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores necessitatibus ex corporis
 							dolorum aperiam dolor numquam perspiciatis minus nesciunt officiis! Veritatis dignissimos
-							tempora ducimus assumenda earum impedit velit, mollitia amet!</p>
+							tempora ducimus assumenda earum impedit velit, mollitia amet!
+						</p>
 					</div>
 				</article>
+			</div>
+		</div>
+	</section>
+
+	<section id="product">
+		<div class="inner">
+			<h1>Product</h1>
+			<a href="#">DF</a>
+			<a href="#">Lorem, ipsum.</a>
+			<a href="#">Lorem, ipsum.</a>
+			<div class="wrap">
+
+				<article class="product_slider">
+					<ul class="product_list">
+						<li data-index="1">
+							<div class="txt">
+								<h2>Product one</h2>
+								<p>&#8361;100,000</p>
+								<a href="#"></a>
+								<a href="#"></a>
+								<a href="#"></a>
+							</div>
+						</li>
+						<li data-index="2">
+							<div class="txt">
+								<h2>Product two</h2>
+								<p>&#8361;200,000</p>
+								<a href="#"></a>
+								<a href="#"></a>
+								<a href="#"></a>
+							</div>
+						</li>
+						<li data-index="3">
+							<div class="txt">
+								<h2>Product three</h2>
+								<p>&#8361;300,000</p>
+								<a href="#"></a>
+								<a href="#"></a>
+								<a href="#"></a>
+							</div>
+						</li>
+						<li data-index="4">
+							<div class="txt">
+								<h2>Product four</h2>
+								<p>&#8361;400,000</p>
+								<a href="#"></a>
+								<a href="#"></a>
+								<a href="#"></a>
+							</div>
+						</li>
+						<li data-index="5">
+							<div class="txt">
+								<h2>Product five</h2>
+								<p>&#8361;500,000</p>
+								<a href="#"></a>
+								<a href="#"></a>
+								<a href="#"></a>
+							</div>
+						</li>
+						<li data-index="6">
+							<div class="txt">
+								<h2>Product six</h2>
+								<p>&#8361;600,000</p>
+								<a href="#"></a>
+								<a href="#"></a>
+								<a href="#"></a>
+							</div>
+						</li>
+						<li data-index="7">
+							<div class="txt">
+								<h2>Product seven</h2>
+								<p>&#8361;700,000</p>
+								<a href="#"></a>
+								<a href="#"></a>
+								<a href="#"></a>
+							</div>
+						</li>
+						<li data-index="8">
+							<div class="txt">
+								<h2>Product eight</h2>
+								<p>&#8361;800,000</p>
+								<a href="#"></a>
+								<a href="#"></a>
+								<a href="#"></a>
+							</div>
+						</li>
+						<li data-index="9">
+							<div class="txt">
+								<h2>Product nine</h2>
+								<p>&#8361;900,000</p>
+								<a href="#"></a>
+								<a href="#"></a>
+								<a href="#"></a>
+							</div>
+						</li>
+					</ul>
+				</article>
+			
+			</div>
+		</div>
+	</section>
+
+	<section id="banner">
+		<div class="inner">
+			<h1>DODAL</h1>
+			<h2>Smart Search</h2>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita inventore quisquam nisi est dolor
+				incidunt minima cum enim ipsum magni?</p>
+
+			<div class="box">
+				<a href="#">lorem <i class="fas fa-sort-down"></i></a>
+				<a href="#">lorem <i class="fas fa-sort-down"></i></a>
+				<a href="#">Search<i class="fas fa-search"></i></a>
+
 			</div>
 		</div>
 	</section>
@@ -214,69 +333,17 @@
 		</div>
 	</section>
 
-	<section id="banner">
+	<section id="comment">
 		<div class="inner">
-			<h1>DODAL</h1>
-			<h2>Smart Search</h2>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita inventore quisquam nisi est dolor
-				incidunt minima cum enim ipsum magni?</p>
+			<h1>Comment</h1>
+			<div class="wrap">
 
-			<div class="box">
-				<a href="#">lorem <i class="fas fa-sort-down"></i></a>
-				<a href="#">lorem <i class="fas fa-sort-down"></i></a>
-				<a href="#">Search<i class="fas fa-search"></i></a>
+
 
 			</div>
 		</div>
 	</section>
 
-	<section id="comment">
-		<div class="inner">
-			<h1>RECENT COMMENT</h1>
-			<ul>
-				<li>
-					<a href="#">Lorem ipsum dolor, sit amet consectetur adipisicing.</a>
-					<span>2021-07-23</span>
-				</li>
-				<li>
-					<a href="#">Lorem ipsum dolor, sit amet consectetur adipisicing.</a>
-					<span>2021-07-23</span>
-				</li>
-				<li>
-					<a href="#">Lorem ipsum dolor, sit amet consectetur adipisicing.</a>
-					<span>2021-07-23</span>
-				</li>
-				<li>
-					<a href="#">Lorem ipsum dolor, sit amet consectetur adipisicing.</a>
-					<span>2021-07-23</span>
-				</li>
-				<li>
-					<a href="#">Lorem ipsum dolor, sit amet consectetur adipisicing.</a>
-					<span>2021-07-23</span>
-				</li>
-				<li>
-					<a href="#">Lorem ipsum dolor, sit amet consectetur adipisicing.</a>
-					<span>2021-07-23</span>
-				</li>
-				<li>
-					<a href="#">Lorem ipsum dolor, sit amet consectetur adipisicing.</a>
-					<span>2021-07-23</span>
-				</li>
-				<li>
-					<a href="#">Lorem ipsum dolor, sit amet consectetur adipisicing.</a>
-					<span>2021-07-23</span>
-				</li>
-				<li>
-					<a href="#">Lorem ipsum dolor, sit amet consectetur adipisicing.</a>
-					<span>2021-07-23</span>
-				</li>
-				<li>
-					<a href="#">Lorem ipsum dolor, sit amet consectetur adipisicing.</a>
-					<span>2021-07-23</span>
-				</li>
-			</ul>
-		</div>
-	</section>
 
 	<footer id="footer">
 		<div class="inner">
