조직도 작업중

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 	<section id="product">
 		<div class="inner">
 			<h1>Product</h1>
-			<a href="#">DF</a>
+			<a href="#">Lore</a>
 			<a href="#">Lorem, ipsum.</a>
 			<a href="#">Lorem, ipsum.</a>
 			<div class="wrap">
@@ -178,81 +178,81 @@
 							<div class="txt">
 								<h2>Product one</h2>
 								<p>&#8361;100,000</p>
-								<a href="#"></a>
-								<a href="#"></a>
-								<a href="#"></a>
+								<a href="#">Strawbery moon</a>
+								<!-- <a href="#"></a>
+								<a href="#"></a> -->
 							</div>
 						</li>
 						<li data-index="2">
 							<div class="txt">
 								<h2>Product two</h2>
 								<p>&#8361;200,000</p>
-								<a href="#"></a>
-								<a href="#"></a>
-								<a href="#"></a>
+								<a href="#">Strawbery moon</a>
+								<!-- <a href="#"></a>
+								<a href="#"></a> -->
 							</div>
 						</li>
 						<li data-index="3">
 							<div class="txt">
 								<h2>Product three</h2>
 								<p>&#8361;300,000</p>
-								<a href="#"></a>
-								<a href="#"></a>
-								<a href="#"></a>
+								<a href="#">Strawbery moon</a>
+								<!-- <a href="#"></a>
+								<a href="#"></a> -->
 							</div>
 						</li>
 						<li data-index="4">
 							<div class="txt">
 								<h2>Product four</h2>
 								<p>&#8361;400,000</p>
-								<a href="#"></a>
-								<a href="#"></a>
-								<a href="#"></a>
+								<a href="#">Strawbery moon</a>
+								<!-- <a href="#"></a>
+								<a href="#"></a> -->
 							</div>
 						</li>
 						<li data-index="5">
 							<div class="txt">
 								<h2>Product five</h2>
 								<p>&#8361;500,000</p>
-								<a href="#"></a>
-								<a href="#"></a>
-								<a href="#"></a>
+								<a href="#">Strawbery moon</a>
+								<!-- <a href="#"></a>
+								<a href="#"></a> -->
 							</div>
 						</li>
 						<li data-index="6">
 							<div class="txt">
 								<h2>Product six</h2>
 								<p>&#8361;600,000</p>
-								<a href="#"></a>
-								<a href="#"></a>
-								<a href="#"></a>
+								<a href="#">Strawbery moon</a>
+								<!-- <a href="#"></a>
+								<a href="#"></a> -->
 							</div>
 						</li>
 						<li data-index="7">
 							<div class="txt">
 								<h2>Product seven</h2>
 								<p>&#8361;700,000</p>
-								<a href="#"></a>
-								<a href="#"></a>
-								<a href="#"></a>
+								<a href="#">Strawbery moon</a>
+								<!-- <a href="#"></a>
+								<a href="#"></a> -->
 							</div>
 						</li>
 						<li data-index="8">
 							<div class="txt">
 								<h2>Product eight</h2>
 								<p>&#8361;800,000</p>
-								<a href="#"></a>
-								<a href="#"></a>
-								<a href="#"></a>
+								<a href="#">Strawbery moon</a>
+								<!-- <a href="#"></a>
+								<a href="#"></a> -->
 							</div>
 						</li>
 						<li data-index="9">
 							<div class="txt">
 								<h2>Product nine</h2>
 								<p>&#8361;900,000</p>
-								<a href="#"></a>
-								<a href="#"></a>
-								<a href="#"></a>
+								<a href="#">Strawbery moon</a>
+								<!-- <a href="#"></a>
+								<a href="#"></a> -->
 							</div>
 						</li>
 					</ul>
