--- a/department.html
+++ b/department.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>department</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>department</title>
 	<script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="css/style.css">
-	
+
 <body>
-    <header id="header_sub">
+	<header id="header_sub">
 		<div class="inner">
 			<h1><a href="index.html">DODAL</a></h1>
 
@@ -51,14 +52,125 @@
 			</nav>
 		</div>
 	</header>
-	 
-    <section class="content department">
-        <div class="sub_visual"></div>
-        <div class="inner">
-            <h1>Corporate/Organization</h1>
-			<p>다시 작업중</p>
-            <!-- 서브페이지 컨텐츠가 들어가는 부분 -->
-<!-- 
+
+	<section class="content department">
+		<div class="sub_visual"></div>
+		<div class="inner">
+			<h1>Corporate</h1>
+			<!-- 서브페이지 컨텐츠가 들어가는 부분 -->
+			<div class="wrap">
+				<article class="company">
+					<div class="main_pic"></div>
+					<div class="txt">
+						<h2>Lorem, ipsum.</h2>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatum vero maiores
+							error asperiores! Nesciunt veniam iste recusandae. Ab, officia.</p>
+						<a href="#">Tel +82 7777 7777</a>
+						<a href="#">E-mail djd8320@naver.com</a>
+					</div>
+				</article>
+
+				<div class="team">
+					<article>
+						<div class="pic"></div>
+						<h3>Alena Schilller</h3>
+						<p>Search Engines</p>
+						<a href="#"><i class="fab fa-facebook-f"></i></a>
+						<a href="#"><i class="fab fa-twitter"></i></a>
+						<a href="#"><i class="fab fa-instagram"></i></a>
+					</article>
+					<article>
+						<div class="pic"></div>
+						<h3>Alena Schilller</h3>
+						<p>Search Engines</p>
+						<a href="#"><i class="fab fa-facebook-f"></i></a>
+						<a href="#"><i class="fab fa-twitter"></i></a>
+						<a href="#"><i class="fab fa-instagram"></i></a>
+					</article>
+					<article>
+						<div class="pic"></div>
+						<h3>Alena Schilller</h3>
+						<p>Search Engines</p>
+						<a href="#"><i class="fab fa-facebook-f"></i></a>
+						<a href="#"><i class="fab fa-twitter"></i></a>
+						<a href="#"><i class="fab fa-instagram"></i></a>
+					</article>
+					<article>
+						<div class="pic"></div>
+						<h3>Alena Schilller</h3>
+						<p>Search Engines</p>
+						<a href="#"><i class="fab fa-facebook-f"></i></a>
+						<a href="#"><i class="fab fa-twitter"></i></a>
+						<a href="#"><i class="fab fa-instagram"></i></a>
+					</article>
+					<article>
+						<div class="pic"></div>
+						<h3>Alena Schilller</h3>
+						<p>Search Engines</p>
+						<a href="#"><i class="fab fa-facebook-f"></i></a>
+						<a href="#"><i class="fab fa-twitter"></i></a>
+						<a href="#"><i class="fab fa-instagram"></i></a>
+					</article>
+					<article>
+						<div class="pic"></div>
+						<h3>Alena Schilller</h3>
+						<p>Search Engines</p>
+						<a href="#"><i class="fab fa-facebook-f"></i></a>
+						<a href="#"><i class="fab fa-twitter"></i></a>
+						<a href="#"><i class="fab fa-instagram"></i></a>
+					</article>
+					<article>
+						<div class="pic"></div>
+						<h3>Alena Schilller</h3>
+						<p>Search Engines</p>
+						<a href="#"><i class="fab fa-facebook-f"></i></a>
+						<a href="#"><i class="fab fa-twitter"></i></a>
+						<a href="#"><i class="fab fa-instagram"></i></a>
+					</article>
+					<article>
+						<div class="pic"></div>
+						<h3>Alena Schilller</h3>
+						<p>Search Engines</p>
+						<a href="#"><i class="fab fa-facebook-f"></i></a>
+						<a href="#"><i class="fab fa-twitter"></i></a>
+						<a href="#"><i class="fab fa-instagram"></i></a>
+					</article>
+					<article>
+						<div class="pic"></div>
+						<h3>Alena Schilller</h3>
+						<p>Search Engines</p>
+						<a href="#"><i class="fab fa-facebook-f"></i></a>
+						<a href="#"><i class="fab fa-twitter"></i></a>
+						<a href="#"><i class="fab fa-instagram"></i></a>
+					</article>
+					<article>
+						<div class="pic"></div>
+						<h3>Alena Schilller</h3>
+						<p>Search Engines</p>
+						<a href="#"><i class="fab fa-facebook-f"></i></a>
+						<a href="#"><i class="fab fa-twitter"></i></a>
+						<a href="#"><i class="fab fa-instagram"></i></a>
+					</article>
+					<article>
+						<div class="pic"></div>
+						<h3>Alena Schilller</h3>
+						<p>Search Engines</p>
+						<a href="#"><i class="fab fa-facebook-f"></i></a>
+						<a href="#"><i class="fab fa-twitter"></i></a>
+						<a href="#"><i class="fab fa-instagram"></i></a>
+					</article>
+					<article>
+						<div class="pic"></div>
+						<h3>Alena Schilller</h3>
+						<p>Search Engines</p>
+						<a href="#"><i class="fab fa-facebook-f"></i></a>
+						<a href="#"><i class="fab fa-twitter"></i></a>
+						<a href="#"><i class="fab fa-instagram"></i></a>
+					</article>
+				</div>
+			</div>
+
+			<!-- 
 			<div class="division">
 				<ul class="div_tree">
 					<li>
@@ -126,10 +238,10 @@
 
 
 
-        </div>
-    </section>
+		</div>
+	</section>
 
-    <footer id="footer_sub">
+	<footer id="footer_sub">
 		<div class="inner">
 
 			<div class="wrap">
@@ -188,4 +300,5 @@
 		</div>
 	</footer>
 </body>
+
 </html>
