조직도 작업중

--- a/department.html
+++ b/department.html
@@ -57,12 +57,17 @@
 		<div class="sub_visual"></div>
 		<div class="inner">
 			<h1>Corporate</h1>
-			<!-- 서브페이지 컨텐츠가 들어가는 부분 -->
+			<ul class="team_name">
+				<li><a href="#">온라인 마케팅부</a></li>
+				<li><a href="#">경영 지원부</a></li>
+				<li><a href="#">해외 영업부</a></li>
+				<li><a href="#">관리 사업부</a></li>
+			</ul>
 			<div class="wrap">
 				<article class="company">
 					<div class="main_pic"></div>
 					<div class="txt">
-						<h2>Lorem, ipsum.</h2>
+						<h2>온라인 마케팅</h2>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatum vero maiores
 							error asperiores! Nesciunt veniam iste recusandae. Ab, officia.</p>
 						<a href="#">Tel +82 7777 7777</a>
@@ -71,6 +76,8 @@
 				</article>
 
 				<div class="team">
+					<h1>온라인 마케팅 부서</h1>
+					<h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit.<br> Quos libero doloribus nisi. Maxime, nostrum saepe. what is this simply</h2>
 					<article>
 						<div class="pic"></div>
 						<h3>Alena Schilller</h3>
