조인 작업중

--- a/community.html
+++ b/community.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>community</title>
-    <script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>community</title>
+	<script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <header id="header_sub">
+	<header id="header_sub">
 		<div class="inner">
 			<h1><a href="index.html">DODAL</a></h1>
 
@@ -64,15 +66,15 @@
 			</div>
 
 			<ul class="header2">
-				<li><a href="#">전체</a></li>
-				<li><a href="#">사업의뢰</a></li>
-				<li><a href="#">견적문의</a></li>
-				<li><a href="#">제작문의</a></li>
-				<li><a href="#">제품개발문의</a></li>
-				<li><a href="#">제휴문의</a></li>
-				<li><a href="#">기타문의</a></li>
+				<li><a href="#" onclick="return false">전체</a></li>
+				<li><a href="#" onclick="return false">사업의뢰</a></li>
+				<li><a href="#" onclick="return false">견적문의</a></li>
+				<li><a href="#" onclick="return false">제작문의</a></li>
+				<li><a href="#" onclick="return false">제품개발문의</a></li>
+				<li><a href="#" onclick="return false">제휴문의</a></li>
+				<li><a href="#" onclick="return false">기타문의</a></li>
 			</ul>
-		
+
 			<table summary="게시글 번호, 게시글 제목, 작성자, 작성일을 포함한 자유게시판">
 				<caption class="hidden">회원자유게시판</caption>
 				<thead>
@@ -85,53 +87,53 @@
 
 				<tbody>
 					<tr>
-						<td><span>확인</span><a href="#">제품개발문의드립니다.</a></td>
+						<td><span>확인</span><a href="#" onclick="return false">제품개발문의드립니다.</a></td>
 						<td>dudujeong@dcodelab.com</td>
 						<td>2021.08.03</td>
 					</tr>
 					<tr>
-						<td><span>확인</span><a href="#">제품개발문의드립니다.</a></td>
+						<td><span>확인</span><a href="#" onclick="return false">제품개발문의드립니다.</a></td>
 
 						<td>dudujeong@dcodelab.com</td>
 						<td>2021.08.03</td>
 					</tr>
 					<tr>
-						<td><span>확인</span><a href="#">제품개발문의드립니다.</a></td>
+						<td><span>확인</span><a href="#" onclick="return false">제품개발문의드립니다.</a></td>
 						<td>dudujeong@dcodelab.com</td>
 						<td>2021.08.03</td>
 					</tr>
 					<tr>
-						<td><span>확인</span><a href="#">제품개발문의드립니다.</a></td>
+						<td><span>확인</span><a href="#" onclick="return false">제품개발문의드립니다.</a></td>
 						<td>dudujeong@dcodelab.com</td>
 						<td>2021.08.03</td>
 					</tr>
 					<tr>
-						<td><span>확인</span><a href="#">제품개발문의드립니다.</a></td>
+						<td><span>확인</span><a href="#" onclick="return false">제품개발문의드립니다.</a></td>
 						<td>dudujeong@dcodelab.com</td>
 						<td>2021.08.03</td>
 					</tr>
 					<tr>
-						<td><span>확인</span><a href="#">제품개발문의드립니다.</a></td>
+						<td><span>확인</span><a href="#" onclick="return false">제품개발문의드립니다.</a></td>
 						<td>dudujeong@dcodelab.com</td>
 						<td>2021.08.03</td>
 					</tr>
 					<tr>
-						<td><span>확인</span><a href="#">제품개발문의드립니다.</a></td>
+						<td><span>확인</span><a href="#" onclick="return false">제품개발문의드립니다.</a></td>
 						<td>dudujeong@dcodelab.com</td>
 						<td>2021.08.03</td>
 					</tr>
 					<tr>
-						<td><span>확인</span><a href="#">제품개발문의드립니다.</a></td>
+						<td><span>확인</span><a href="#" onclick="return false">제품개발문의드립니다.</a></td>
 						<td>dudujeong@dcodelab.com</td>
 						<td>2021.08.03</td>
 					</tr>
 					<tr>
-						<td><span>확인</span><a href="#">제품개발문의드립니다.</a></td>
+						<td><span>확인</span><a href="#" onclick="return false">제품개발문의드립니다.</a></td>
 						<td>dudujeong@dcodelab.com</td>
 						<td>2021.08.03</td>
 					</tr>
 					<tr>
-						<td><span>확인</span><a href="#">제품개발문의드립니다.</a></td>
+						<td><span>확인</span><a href="#" onclick="return false">제품개발문의드립니다.</a></td>
 						<td>dudujeong@dcodelab.com</td>
 						<td>2021.08.03</td>
 					</tr>
@@ -140,25 +142,30 @@
 			</table>
 
 			<div class="pagination">
-				<div class="search">검색어를 입력해주세요<a href="#" class="prev"></a><i class="fas fa-search"></i></a></div>
+				<div class="search">검색어를 입력해주세요<a href="#" class="prev" onclick="return false"></a><i
+						class="fas fa-search"></i></a></div>
 				<P class="numbers">
-					<a href="#">1</a>
-					<a href="#">2</a>
-					<a href="#">3</a>
-					<a href="#">4</a>
-					<a href="#">5</a>
-					<a href="#">6</a>
-					<a href="#">7</a>
-					<a href="#">8</a>
-					<a href="#">9</a>
-					<a href="#">10</a>
-					<a href="#" class="left1"><i class="fas fa-angle-left"></i></a>
-					<a href="#" class="left2"><i class="fas fa-angle-double-left"></i></a>
-					<a href="#" class="right1"><i class="fas fa-angle-right"></i></a>
-					<a href="#" class="right2"><i class="fas fa-angle-double-right"></i></a>
+					<a href="#" onclick="return false">1</a>
+					<a href="#" onclick="return false">2</a>
+					<a href="#" onclick="return false">3</a>
+					<a href="#" onclick="return false">4</a>
+					<a href="#" onclick="return false">5</a>
+					<a href="#" onclick="return false">6</a>
+					<a href="#" onclick="return false">7</a>
+					<a href="#" onclick="return false">8</a>
+					<a href="#" onclick="return false">9</a>
+					<a href="#" onclick="return false">10</a>
+					<a href="#" class="left1" onclick="return false"><i class="fas fa-angle-left"></i>
+					</a>
+					<a href="#" class="left2" onclick="return false"><i class="fas fa-angle-double-left"></i>
+					</a>
+					<a href="#" class="right1" onclick="return false"><i class="fas fa-angle-right"></i>
+					</a>
+					<a href="#" class="right2" onclick="return false"><i class="fas fa-angle-double-right"></i>
+					</a>
 
 				</P>
-				<a href="#" class="next">문의</a>
+				<a href="#" class="next" onclick="return false">문의</a>
 			</div>
 
 
