--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
 				<ul class="util">
 					<li><a href="join.html"><i class="fas fa-user"></i></a></li>
-					<li><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
-					<li><a href="#"><i class="fas fa-search"></i></a></li>
-					<li><a href="#">KOR <i class="fas fa-chevron-down"></i></a></li>
+					<li><a href="#" onclick="return false"><i class="fas fa-shopping-bag"></i></a></li>
+					<li><a href="#" onclick="return false"><i class="fas fa-search"></i></a></li>
+					<li><a href="#" onclick="return false">KOR <i class="fas fa-chevron-down"></i></a></li>
 				</ul>
 
 			</nav>
@@ -64,7 +64,7 @@
 		<div class="txt">
 			<h1>Lorem</h1>
 			<p>Although I tend to favor a natural look,<br> I also like to have fun with make up.</p>
-			<a href="#">Read more <img src="img/arrow1.png" alt="arrow"></a>
+			<a href="#" onclick="return false">Read more <img src="img/arrow1.png" alt="arrow"></a>
 		</div>
 		<article id="slider">
 			<ul class="list">
@@ -109,7 +109,7 @@
 					</div>
 					<div class="news_txt">
 						<h2>
-							<a href="#">Lorem</a>
+							<a href="#" onclick="return false">Lorem</a>
 						</h2>
 						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores necessitatibus ex corporis
 							dolorum aperiam dolor numquam perspiciatis minus nesciunt officiis! Veritatis dignissimos
@@ -124,7 +124,7 @@
 					</div>
 					<div class="news_txt">
 						<h2>
-							<a href="#">Lorem</a>
+							<a href="#" onclick="return false">Lorem</a>
 						</h2>
 						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores necessitatibus ex corporis
 							dolorum aperiam dolor numquam perspiciatis minus nesciunt officiis! Veritatis dignissimos
@@ -138,7 +138,7 @@
 					</div>
 					<div class="news_txt">
 						<h2>
-							<a href="#">Lorem</a>
+							<a href="#" onclick="return false">Lorem</a>
 						</h2>
 						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores necessitatibus ex corporis
 							dolorum aperiam dolor numquam perspiciatis minus nesciunt officiis! Veritatis dignissimos
@@ -152,7 +152,7 @@
 					</div>
 					<div class="news_txt">
 						<h2>
-							<a href="#">Lorem</a>
+							<a href="#" onclick="return false">Lorem</a>
 						</h2>
 						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores necessitatibus ex corporis
 							dolorum aperiam dolor numquam perspiciatis minus nesciunt officiis! Veritatis dignissimos
@@ -167,9 +167,9 @@
 	<section id="product">
 		<div class="inner">
 			<h1>Product</h1>
-			<a href="#">Lore</a>
-			<a href="#">Lorem, ipsum.</a>
-			<a href="#">Lorem, ipsum.</a>
+			<a href="#" onclick="return false">Lore</a>
+			<a href="#" onclick="return false">Lorem, ipsum.</a>
+			<a href="#" onclick="return false">Lorem, ipsum.</a>
 			<div class="wrap">
 
 				<article class="product_slider">
@@ -178,7 +178,7 @@
 							<div class="txt">
 								<h2>Product one</h2>
 								<p>&#8361;100,000</p>
-								<a href="#">Strawbery moon</a>
+								<a href="#" onclick="return false">Strawbery moon</a>
 								<!-- <a href="#"></a>
 								<a href="#"></a> -->
 							</div>
@@ -187,7 +187,7 @@
 							<div class="txt">
 								<h2>Product two</h2>
 								<p>&#8361;200,000</p>
-								<a href="#">Strawbery moon</a>
+								<a href="#" onclick="return false">Strawbery moon</a>
 								<!-- <a href="#"></a>
 								<a href="#"></a> -->
 							</div>
@@ -196,7 +196,7 @@
 							<div class="txt">
 								<h2>Product three</h2>
 								<p>&#8361;300,000</p>
-								<a href="#">Strawbery moon</a>
+								<a href="#" onclick="return false">Strawbery moon</a>
 								<!-- <a href="#"></a>
 								<a href="#"></a> -->
 							</div>
@@ -205,7 +205,7 @@
 							<div class="txt">
 								<h2>Product four</h2>
 								<p>&#8361;400,000</p>
-								<a href="#">Strawbery moon</a>
+								<a href="#" onclick="return false">Strawbery moon</a>
 								<!-- <a href="#"></a>
 								<a href="#"></a> -->
 							</div>
@@ -214,7 +214,7 @@
 							<div class="txt">
 								<h2>Product five</h2>
 								<p>&#8361;500,000</p>
-								<a href="#">Strawbery moon</a>
+								<a href="#" onclick="return false">Strawbery moon</a>
 								<!-- <a href="#"></a>
 								<a href="#"></a> -->
 							</div>
@@ -223,7 +223,7 @@
 							<div class="txt">
 								<h2>Product six</h2>
 								<p>&#8361;600,000</p>
-								<a href="#">Strawbery moon</a>
+								<a href="#" onclick="return false">Strawbery moon</a>
 								<!-- <a href="#"></a>
 								<a href="#"></a> -->
 							</div>
@@ -232,7 +232,7 @@
 							<div class="txt">
 								<h2>Product seven</h2>
 								<p>&#8361;700,000</p>
-								<a href="#">Strawbery moon</a>
+								<a href="#" onclick="return false">Strawbery moon</a>
 								<!-- <a href="#"></a>
 								<a href="#"></a> -->
 							</div>
@@ -241,7 +241,7 @@
 							<div class="txt">
 								<h2>Product eight</h2>
 								<p>&#8361;800,000</p>
-								<a href="#">Strawbery moon</a>
+								<a href="#" onclick="return false">Strawbery moon</a>
 								<!-- <a href="#"></a>
 								<a href="#"></a> -->
 							</div>
@@ -250,7 +250,7 @@
 							<div class="txt">
 								<h2>Product nine</h2>
 								<p>&#8361;900,000</p>
-								<a href="#">Strawbery moon</a>
+								<a href="#" onclick="return false">Strawbery moon</a>
 								<!-- <a href="#"></a>
 								<a href="#"></a> -->
 							</div>
@@ -270,9 +270,9 @@
 				incidunt minima cum enim ipsum magni?</p>
 
 			<div class="box">
-				<a href="#">lorem <i class="fas fa-sort-down"></i></a>
-				<a href="#">lorem <i class="fas fa-sort-down"></i></a>
-				<a href="#">Search<i class="fas fa-search"></i></a>
+				<a href="#" onclick="return false">lorem <i class="fas fa-sort-down"></i></a>
+				<a href="#" onclick="return false">lorem <i class="fas fa-sort-down"></i></a>
+				<a href="#" onclick="return false">Search<i class="fas fa-search"></i></a>
 
 			</div>
 		</div>
@@ -294,7 +294,7 @@
 							atque
 							architecto minima!</p>
 
-						<a href="#">VIEW DETAIL</a>
+						<a href="#" onclick="return false">VIEW DETAIL</a>
 					</div>
 
 				</article>
@@ -309,7 +309,7 @@
 							atque
 							architecto minima!</p>
 
-						<a href="#"><i class="fas fa-arrow-right"></i></a>
+						<a href="#" onclick="return false"><i class="fas fa-arrow-right"></i></a>
 					</div>
 
 				</article>
@@ -326,7 +326,7 @@
 							atque
 							architecto minima!</p>
 
-						<a href="#"><i class="fas fa-arrow-right"></i></a>
+						<a href="#" onclick="return false"><i class="fas fa-arrow-right"></i></a>
 					</div>
 				</article>
 			</div>
@@ -352,23 +352,23 @@
 				<article class="box1">
 					<p class="menu">고객센터</p>
 					<span>1204 - 4645</span>
-					<p><a href="#">챗봇상담</a></p>
+					<p><a href="#" onclick="return false">챗봇상담</a></p>
 					<p>제품문의 · 쇼룸안내 · A/S · 분해설치</p>
 					<p>평일 09:30 - 17:30 | 점심시간 12:30 - 13:30</p>
 				</article>
 
 				<article class="box2">
 					<p class="menu">기업고객 문의</p>
-					<p><a href="#">djd8320@naver.com</a></p>
+					<p><a href="#" onclick="return false">djd8320@naver.com</a></p>
 					<p>대량구매 및 마케팅 제휴</p>
 					<p>평일 10:30 - 17:30 | 점심시간 12:30 - 13:30</p>
 				</article>
 
 				<article class="box3">
 					<p class="menu">Quick Menu</p>
-					<p><a href="#">About Us</a></p>
-					<span><a href="#">개인정보 처리방침</a></span>
-					<p><a href="#">이용약관</a></p>
+					<p><a href="#" onclick="return false">About Us</a></p>
+					<span><a href="#" onclick="return false">개인정보 처리방침</a></span>
+					<p><a href="#" onclick="return false">이용약관</a></p>
 				</article>
 
 				<article class="box4">
@@ -378,26 +378,26 @@
 						개인정보보호 및 청소년보호 책임자 · 도다정 | 호스팅 서비스사업자 ·(주)도달</p>
 					<p>20121 DCODELAB &copy; copyright all right reserved.</p>
 
-					<a href="#">사업자 정보 확인</a>
-					<a href="#"><img src="img/spc_slou_pc.png"> 에스크로 가입사실 확인</a>
+					<a href="#" onclick="return false">사업자 정보 확인</a>
+					<a href="#" onclick="return false"><img src="img/spc_slou_pc.png"> 에스크로 가입사실 확인</a>
 				</article>
 			</div>
 		</div>
 		<div class="list">
 			<div class="wrap">
 				<div class="company">
-					<a href="#"><img src="img/fursys.png"></a>
-					<a href="#"><img src="img/iloom.png"></a>
-					<a href="#"><img src="img/sidiz.png"></a>
-					<a href="#"><img src="img/desker.png"></a>
-					<a href="#"><img src="img/slou.png"></a>
-					<a href="#"><img src="img/alloso.png"></a>
+					<a href="#" onclick="return false"><img src="img/fursys.png"></a>
+					<a href="#" onclick="return false"><img src="img/iloom.png"></a>
+					<a href="#" onclick="return false"><img src="img/sidiz.png"></a>
+					<a href="#" onclick="return false"><img src="img/desker.png"></a>
+					<a href="#" onclick="return false"><img src="img/slou.png"></a>
+					<a href="#" onclick="return false"><img src="img/alloso.png"></a>
 
 					<div class="sns">
-						<a href="#"><i class="fab fa-instagram"></i></a>
-						<a href="#"><i class="fab fa-facebook-f"></i></a>
-						<a href="#"><i class="fab fa-twitter"></i></a>
-						<a href="#"><i class="fab fa-youtube"></i></a>
+						<a href="#" onclick="return false"><i class="fab fa-instagram"></i></a>
+						<a href="#" onclick="return false"><i class="fab fa-facebook-f"></i></a>
+						<a href="#" onclick="return false"><i class="fab fa-twitter"></i></a>
+						<a href="#" onclick="return false"><i class="fab fa-youtube"></i></a>
 					</div>
 				</div>
 			</div>
