--- a/department.html
+++ b/department.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>department</title>
 	<script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
+	<script defer src="js/department.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 
 <body>
