join페이지 작업중

--- a/index.html
+++ b/index.html
@@ -300,7 +300,8 @@
 				</article>
 				<article>
 
-					<img src="img/br7.jpg" alt="브랜드1">
+					<!-- img/br7.jpg -->
+					<div class="pic"></div>
 					<!-- <video autoplay loop muted src="img/bc1.mp4"></video> -->
 					<div class="txt">
 
@@ -317,7 +318,8 @@
 					<img src="img/br5.jpg" alt="브랜드2">
 				</article> -->
 				<article>
-					<img src="img/br4.jpg" alt="브랜드2">
+					<!-- img/br4.jpg -->
+					<div class="pic"></div>
 					<div class="txt">
 
 
