--- a/join.html
+++ b/join.html
@@ -144,6 +144,10 @@
 								<input type="text" name="address" id="address">
 
 							</td>
+							<td>
+								<input type="text" name="address" id="address">
+
+							</td>
 						</tr>
 						<!-- <tr>
 							<th scope="rows"><span>GENDER</span><div class="cir"></div></th>
