--- a/location.html
+++ b/location.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>location</title>
-    <link rel="stylesheet" href="css/style.css">
-	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=f97a955efb03fb99cb37673ba7149432"></script>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>location</title>
+	<link rel="stylesheet" href="css/style.css">
+	<script type="text/javascript"
+		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=f97a955efb03fb99cb37673ba7149432"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
 	<script defer src="js/map.js"></script>
 </head>
+
 <body>
-    <header id="header_sub">
+	<header id="header_sub">
 		<div class="inner">
 			<h1><a href="index.html">DODAL</a></h1>
 
@@ -58,33 +61,50 @@
 
 
 	<section class="content location">
-        <div class="sub_visual"></div>
-        <div class="inner">
+		<div class="sub_visual"></div>
+		<div class="inner">
 			<h1>Location</h1>
 			<h2>DODAL로 오시는길을 안내해드립니다.</h2>
-            <div id="map"></div>
+			
+				<ul class="map_header">
+					<li><span href="#"><img src="img/busi_i01.png" alt="위치이미지">Address</span>
+						<h3>오시는길 안내</h3>
+						<p>ㅇㅇ역 5번출구 → 8888번 → ㅇㅇㅇㅇ정류장에서 하차</p>
+					</li>
+					<li><span href="#"><img src="img/busi_i02.png" alt="위치이미지">Telephone</span>
+						<h3>서울본점 전화번호</h3>
+						<p>02-8888-8888</p>
+					</li>
+					<li><span href="#"><img src="img/busi_i03.png" alt="위치이미지">Fax</span>
+						<h3>서울본점 팩스번호</h3>
+						<p>02-8888-8888</p>
+					</li>
+				</ul>
+			
+			<div id="map"></div>
 
 			<!-- <ul class="traffic">
 				<li><a href="#">교통정보 보기</a></li>
 				<li class="on"><a href="#" >교통정보 끄기</a></li>
 			</ul> -->
-		
+
 			<ul class="branch">
-				<li data-index="0" class="on"><a href="#">본점</a></li>
+				<li data-index="0" class="on"><a href="#">본점</a>
+				<p>서울특별시 서울구 서울동 서울로333번길 3333</p></li>
 				<li data-index="1"><a href="#">부산지점</a></li>
 				<li data-index="2"><a href="#">제주지점</a></li>
-		
+
 			</ul>
 
-        </div>
+		</div>
 
 
-    </section>
+	</section>
 
 
 
 
-    <footer id="footer_sub">
+	<footer id="footer_sub">
 		<div class="inner">
 
 			<div class="wrap">
